# Explore

./: .gitignore  CMakeLists.txt  imgui.ini
editor/: CMakeLists.txt
editor/src/: Editor.cpp  Editor.h  main.cpp
engine/: CMakeLists.txt
engine/src/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Input.cpp  Input.h  MainPass.cpp  MainPass.h  RenderPass.h  Renderer.cpp  Renderer.h  StaticMesh.cpp  StaticMesh.h  Window.cpp  Window.h
engine/src/Core/: Engine.cpp  Engine.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Timer.h  Window.cpp  Window.h
engine/src/Graphics/: DescriptorSetManager.cpp  DescriptorSetManager.h  PipelineLayoutManager.cpp  RenderContext.cpp  RenderContext.h  Utils.cpp  Utils.h  VulkanDebugCallback.cpp  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.h  VulkanGPUBuffer.cpp  VulkanGPUBuffer.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanLogicalDevice.cpp  VulkanPhysicalDevice.cpp  VulkanQueue.cpp  VulkanQueue.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSemaphore.cpp  VulkanShader.cpp  VulkanSwapchain.cpp
engine/src/Renderer/: MainPass.cpp  MainPass.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  TextureManager.cpp  TextureManager.h  UIManager.cpp  UIManager.h  UIPass.cpp  UIPass.h  Viewport.cpp  Viewport.h
engine/src/Scene/: Camera.cpp  Camera.h  Entity.h  Light.cpp  Light.h  Model.cpp  Model.h  StaticMesh.cpp  StaticMesh.h  Transformation.cpp  Transformation.h
engine/src/graphics/: DescriptorSetManager.h  PipelineLayoutManager.h  RenderContext.cpp  RenderContext.h  Utils.cpp  Utils.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanDebugCallback.cpp  VulkanDebugCallback.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanFence.cpp  VulkanFence.h  VulkanGPUBuffer.cpp  VulkanGPUBuffer.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanLogicalDevice.cpp  VulkanLogicalDevice.h  VulkanMemoryPool.cpp  VulkanMemoryPool.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanQueue.cpp  VulkanQueue.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSemaphore.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h
engine/src/vulkan/: Instance.cpp  Instance.h  Utils.h
resources/pistol-low-poly/: license.txt  scene.gltf
shaders/: basic.frag  basic.vert
